--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,40 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<body>
+<div class="container" style="background-color:darkslategrey">
+    <div class="card-fluid">
+        <div class="container">
+            <img src="./assets/BookstoreLogo.png" class="card-img" alt="EVERGREENBOOKSTORE">
+            <div class="container-fluid ">
+                <div class="row">
+                    <div class="col-sm-8 input-group">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </div>
+                    <div class="col-sm-4 py-2 float-right">
+                        <a routerLink="signin" class="px-2" role="button"><b>SIGN IN</b></a> |
+                        <a routerLink="register" class="px-2" role="button"><b>REGISTER</b></a> |
+                        <a routerLink="cart" class="px-2" role="button"><b>CART</b></a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="container " style="align-content: center">
+        <div class=" d-flex justify-content-center ">
+            <a routerLink="/business" class="px-2" role="button"><b>BUSINESS</b></a> |
+            <a routerLink="/health" class="px-2" role="button"><b>HEALTH</b></a> |
+            <a routerLink="/marketing" class="px-2" role="button"><b>MARKETING</b></a> |
+            <a routerLink="/programming" class="px-2" role="button"><b>PROGRAMMING</b></a> |
+            <a routerLink="/technology" class="px-2" role="button"><b>TECHNOLOGY</b></a> |
+            <a routerLink="/lifestyle" class="px-2" role="button"><b>LIFE STYLE</b></a> |
+            <a routerLink="/history" class="px-2" role="button"><b>HISTORY</b></a>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="container-fluid" style="background-color: darkgray">
+        <router-outlet></router-outlet>
+</div>
+</body>
